--- a/mobile-app-development.html
+++ b/mobile-app-development.html
@@ -467,11 +467,11 @@
     <section class="service py-3 py-md-3 py-lg-5 about" id="about">
         <div class="container">
             <div class="row">
-                <div class="col-lg-4 wow fadeInLeft">
+                <div class="col-lg-5 wow fadeInLeft">
                     <h2 class="common-heading">Tap into the world’s largest mobile market</h2>
                     <p>with custom Mobile App Development</p>
                 </div>
-                <div class="col-lg-3"></div>
+                <div class="col-lg-2"></div>
                 <div class="col-lg-5 block-1 wow fadeInRight">
                     <div class="common-heading text-l pl25">
                         <p><strong>Android makes up 74% of all mobile apps.</strong> Creating a successful Android app can help to tap into a huge market, take advantage of more customization opportunities and less restrictive Google Play App Store policies to deliver unique value & great usability.</p>
@@ -561,9 +561,12 @@
                     </div>
                 </div>
             </div>
-			<div class="-cta-btn mt70">
+			<div class="-cta-btn">
 				<div class="free-cta-title v-center zoomInDown wow" data-wow-delay="1.4s">
-					<p>Hire a <span>Dedicated Developer</span></p> <a href="#" class="btn-main bg-btn2 lnk">Hire Now<i class="fas fa-chevron-right fa-icon"></i><span class="circle"></span></a> </div>
+					<p>Hire a <span>Dedicated Developer</span></p>
+					<a href="contact-us.html" class="btn-main bg-btn2 lnk">Hire Now<i class="fas fa-chevron-right fa-icon"></i>
+					</a>
+				</div>
 			</div>
 		</div>
 	</section>
@@ -649,13 +652,13 @@
     <section class="our-work py-3 py-md-3 py-lg-5" id="our-work">
 		<div class="container">
 			<div class="row">
-                <div class="col-lg-4 wow fadeInLeft">
+                <div class="col-lg-5 wow fadeInLeft">
                     <div class="common-heading text-l">
                         <h2 class="common-heading mb10">Our Work</h2>
                         <p class="text-bold">Web Development Portfolio</p>
                     </div>
                 </div>
-                <div class="col-lg-3"></div>
+                <div class="col-lg-2"></div>
                 <div class="col-lg-5 wow fadeInRight">
                     <div class="funfact">
                         <div class="common-heading text-l">
@@ -688,9 +691,9 @@
 								</div>
 								<div class="col-sm-12 col-md-6 my-auto">
 									<img src="images/case-study/vero-logo.png" alt="Vero Logo" class="case-study-icon-img">
-									<h2 class="mb-20 heading3 font-size-28 mt-3">Vero App</h2>
-									<p class="pt-3">VERO is a hassle-free, one stop solution for your daily needs. Track what you want to buy, order food, or take a ride. Fit it all in a day with VERO!</p>
-									<a target="_blank" href="vero.html" class="btn btn-naked text-uppercase pt-3">
+									<h2 class="mb-20 heading3 case-study-heading font-size-28 mt-3">Vero App</h2>
+									<p class="pt-3 case-study-text">VERO is a hassle-free, one stop solution for your daily needs. Track what you want to buy, order food, or take a ride. Fit it all in a day with VERO!</p>
+									<a target="_blank" href="vero.html" class="btn btn-naked text-uppercase pt-3 case-study-link">
 										<span class="btn-line btn-line-before"></span>
 										<span class="btn-txt view-cs-btn"> &mdash;&#32;View Case Study</span>
 										<span class="btn-line btn-line-after"></span>
@@ -705,9 +708,9 @@
 								</div>
 								<div class="col-sm-12 col-md-6 my-auto">
 									<img src="images/case-study/homestore-logo.png" alt="Homestore Logo" class="case-study-icon-img">
-									<h2 class="mb-20 heading3 font-size-28 mt-3">Home Store</h2>
-									<p class="pt-3">An online store for buying our high quality cooking oils at best prices. Notch features that define the world’s best oil delivery app.</p>
-									<a target="_blank" href="home-store-app.html" class="btn btn-naked text-uppercase pt-3">
+									<h2 class="mb-20 heading3 case-study-heading font-size-28 mt-3">Home Store</h2>
+									<p class="pt-3 case-study-text">An online store for buying our high quality cooking oils at best prices. Notch features that define the world’s best oil delivery app.</p>
+									<a target="_blank" href="home-store-app.html" class="btn btn-naked text-uppercase pt-3 case-study-link">
 										<span class="btn-line btn-line-before"></span>
 										<span class="btn-txt view-cs-btn"> &mdash;&#32;View Case Study</span>
 										<span class="btn-line btn-line-after"></span>
@@ -718,9 +721,12 @@
 					</div>
 				</div>
 			</div>
-			<div class="-cta-btn mt70">
+			<div class="-cta-btn">
 				<div class="free-cta-title v-center zoomInDown wow" data-wow-delay="1.4s" style="visibility: visible; animation-delay: 1.4s; animation-name: zoomInDown;">
-					<p>Hire a <span>Dedicated Developer</span></p> <a href="#" class="btn-main bg-btn2 lnk">Hire Now<i class="fas fa-chevron-right fa-icon" aria-hidden="true"></i><span class="circle"></span></a> </div>
+					<p>Hire a <span>Dedicated Developer</span></p>
+					<a href="contact-us.html" class="btn-main bg-btn2 lnk">Hire Now<i class="fas fa-chevron-right fa-icon" aria-hidden="true"></i>
+					</a>
+				</div>
 			</div>
 		</div>
 	</section>
@@ -732,7 +738,7 @@
             <div class="row">
                 <div class="col-md-6 wow fadeInLeft">
                     <h2 class="common-heading">Custom Mobile App Development Company</h2>
-                    <p>Dive into the future with Futurealiti – A custom mobile app development company with unmatched development services and technologies. Unlike conventional mobile applications developers around the globe, we have set ourselves apart with technology beyond imagination. We develop traditional mobile apps for startups and SMBs. For major enterprises, we have incredible technologies such as; Augmented Reality (AR), Virtual Reality (VR), and Mixed Reality (MR) to empower them. Futurealiti is on the mission to evolve businesses and organizations, enabling them to streamline their operations and automate workflows. With alluring designs and impeccable coding, we help brands to push the limit and thrive among the best in the world. Leverage our mobile app development services to ignite your overall digital traction and connect with your target audience efficiently.</p>
+                    <p class="custom-app-text">Dive into the future with Futurealiti – A custom mobile app development company with unmatched development services and technologies. Unlike conventional mobile applications developers around the globe, we have set ourselves apart with technology beyond imagination. We develop traditional mobile apps for startups and SMBs. For major enterprises, we have incredible technologies such as; Augmented Reality (AR), Virtual Reality (VR), and Mixed Reality (MR) to empower them. Futurealiti is on the mission to evolve businesses and organizations, enabling them to streamline their operations and automate workflows. With alluring designs and impeccable coding, we help brands to push the limit and thrive among the best in the world. Leverage our mobile app development services to ignite your overall digital traction and connect with your target audience efficiently.</p>
                 </div>
                 <div class="col-md-6 my-auto wow fadeInRight">
                     <img src="images/services/mobile-app-development/custom-mobile-app.webp" alt="Custom Mobile App" class="img-fluid">
@@ -752,7 +758,7 @@
                 </div>
             </div>
 
-            <div class="row my-0 my-md-5">
+            <div class="row my-5">
 				<div class="col-md-12 wow fadeInUp">
                     <div class="services-main-timeline">
                         <div class="services-timeline">
@@ -836,19 +842,21 @@
     <div class="ideal py-3 py-md-3 py-lg-5" id="ideal">
         <div class="container">
             <div class="row">
-                <div class="col-md-6 wow fadeInLeft">
+                <div class="col-md-6 my-auto wow fadeInLeft">
                     <h2 class="common-heading">We Are Your Ideal Mobile App Development Company</h2>
-                    <p>Future Reality has been recognized as a leading mobile app development services provider by its clients all over the world. Our approaches have shown to be cost-effective, making it easier for individuals to turn their ideas into a functional mobile app. With result-driven and data-driven strategies, our mobile app development team is always trying to guarantee that our goods and services create new industry benchmarks throughout the world.</p>
+                    <p class="pt-2">Future Reality has been recognized as a leading mobile app development services provider by its clients all over the world. Our approaches have shown to be cost-effective, making it easier for individuals to turn their ideas into a functional mobile app. With result-driven and data-driven strategies, our mobile app development team is always trying to guarantee that our goods and services create new industry benchmarks throughout the world.</p>
                     <p class="pt-2">By incorporating technologies like Machine Learning (ML), better AI, AR, VR, and MR, we are taking mobile app development to a whole new level. Future Reality is here to help people and companies determine their futures via technology change.</p>
-                    <p class="pt-2"><a href="#"><u>Read the case study</u></a></p>
                 </div>
-                <div class="col-md-6 my-auto wow fadeInRight">
+                <div class="col-md-6 wow fadeInRight">
                     <img src="images/services/mobile-app-development/ideal-mobile-app.webp" alt="Ideal Mobile App" class="img-fluid">
                 </div>
             </div>
-			<div class="-cta-btn mt70">
+			<div class="-cta-btn">
 				<div class="free-cta-title v-center zoomInDown wow" data-wow-delay="1.4s" style="visibility: visible; animation-delay: 1.4s; animation-name: zoomInDown;">
-					<p>Hire a <span>Dedicated Developer</span></p> <a href="#" class="btn-main bg-btn2 lnk">Hire Now<i class="fas fa-chevron-right fa-icon" aria-hidden="true"></i><span class="circle"></span></a> </div>
+					<p>Hire a <span>Dedicated Developer</span></p> 
+					<a href="contact-us.html" class="btn-main bg-btn2 lnk">Hire Now<i class="fas fa-chevron-right fa-icon" aria-hidden="true"></i>
+					</a>
+				</div>
 			</div>
         </div>
     </div>
@@ -1105,9 +1113,9 @@
 					</div>
 				</div>
 			</div>
-			<div class="-cta-btn mt70">
+			<div class="-cta-btn">
 				<div class="free-cta-title v-center zoomInDown wow" data-wow-delay="1.4s" style="visibility: visible; animation-delay: 1.4s; animation-name: zoomInDown;">
-					<p>Hire a <span>Dedicated Developer</span></p> <a href="#" class="btn-main bg-btn2 lnk">Hire Now<i class="fas fa-chevron-right fa-icon" aria-hidden="true"></i><span class="circle"></span></a> </div>
+					<p>Hire a <span>Dedicated Developer</span></p> <a href="contact-us.html" class="btn-main bg-btn2 lnk">Hire Now<i class="fas fa-chevron-right fa-icon" aria-hidden="true"></i><span class="circle"></span></a> </div>
 			</div>
         </div>
     </section>
@@ -1404,14 +1412,13 @@
 					</div>
 				</div>
 			</div>
-			<div class="-cta-btn mt70">
+			<div class="-cta-btn mt30">
 				<div class="free-cta-title v-center wow fadeInUp" data-wow-delay="1s">
 					<p>We
 						<span>Promise.</span> We <span>Deliver.</span>
 					</p>
-					<a href="#" class="btn-main bg-btn2 lnk">Let's Work Together
+					<a href="contact-us.html" class="btn-main bg-btn2 lnk">Let's Work Together
 						<i class="fas fa-chevron-right fa-icon"></i>
-						<span class="circle"></span>
 					</a>
 				</div>
 			</div>
@@ -1430,7 +1437,7 @@
                 </div>
             </div>
             <div class="row">
-                <div class="col-sm-12 mt60 wow fadeInUp">
+                <div class="col-sm-12 mt30 wow fadeInUp">
                     <div class="accordion" id="accordionExample-a">
                         <div class="accordion-item bdr0">
                             <h2 class="accordion-header" id="heading-b">
