--- a/website-development.html
+++ b/website-development.html
@@ -528,8 +528,8 @@
                                 <span>PHP development services are focused on making all forms of web applications' server-sides more safe and powerful. PHP development company effectively tames PHP to provide powerful online portals, B2C & B2B web apps, CMSs, and other web-based solutions, drawing on our PHP programming experience.</span>
                             </div>
                         </div>
-						<div class="pf-item set-bg set-bg wedding" data-setbg="images/portfolio/pf-4.jpg" style="background-image: url(&quot;images/portfolio/pf-4.jpg&quot;); position: absolute; left: 0%; top: 380px;">
-                            <a href="images/portfolio/pf-4.jpg" class="pf-icon image-popup"><span class="icon_plus"></span></a>
+						<div class="pf-item set-bg set-bg wedding" data-setbg="images/services/website-development/custom-web-app-development.webp" style="background-image: url(&quot;images/services/website-development/custom-web-app-development.webp&quot;); position: absolute; left: 0%; top: 380px;">
+                            <a href="images/services/website-development/custom-web-app-development.webp" class="pf-icon image-popup"><span class="icon_plus"></span></a>
                             <div class="pf-text">
                                 <h4>Custom Web App Development</h4>
                                 <span>Web application development solutions that tackle business difficulties in healthcare, finance, retail, and manufacturing are developed by us, a top web app development company. We make certain that the web solution meets your company's needs. Your business operations will be streamlined using custom web websites and apps.</span>
@@ -542,8 +542,8 @@
                                 <span>The goal of content management system (CMS) development is to create custom solutions that make it easier to create, save, organize, alter, and publish digital content. The web development company is capable of providing custom CMS solutions that enable timely and cost-effective web content management while also encouraging website lead creation.</span>
                             </div>
                         </div>
-						<div class="pf-item large-width set-bg natural web-service-img-4" data-setbg="images/portfolio/pf-3.jpg" style="background-image: url(&quot;images/portfolio/pf-3.jpg&quot;); position: absolute; left: 59.9699%; top: 0px;">
-                            <a href="images/portfolio/pf-3.jpg" class="pf-icon image-popup"><span class="icon_plus"></span></a>
+						<div class="pf-item large-width set-bg natural web-service-img-4" data-setbg="images/services/website-development/web-portal-development.webp" style="background-image: url(&quot;images/services/website-development/web-portal-development.webp&quot;); position: absolute; left: 59.9699%; top: 0px;">
+                            <a href="images/services/website-development/web-portal-development.webp" class="pf-icon image-popup"><span class="icon_plus"></span></a>
                             <div class="pf-text">
                                 <h4>Web Portal Development</h4>
                                 <span>We understand the business objectives of online enterprises, whether you're a startup or a large corporation. We create platforms for easy communication with clients to help you grow your business. We create business-to-business (B2B), business-to-consumer (B2C), vendor-to-consumer (V2C), and vendor-to-consumer (V2C) portals, as well as job, matrimony, dating, mailing, and other sorts of online portals.</span>
@@ -552,7 +552,7 @@
                     </div>
                 </div>
             </div>
-			<div class="-cta-btn mt70">
+			<div class="-cta-btn mt-4">
 				<div class="free-cta-title v-center zoomInDown wow" data-wow-delay="1.4s">
 					<p>Hire a <span>Dedicated Developer</span></p> <a href="#" class="btn-main bg-btn2 lnk">Hire Now<i class="fas fa-chevron-right fa-icon"></i><span class="circle"></span></a> </div>
 			</div>
@@ -566,17 +566,17 @@
 			<div class="row">
 				<div class="col-sm-12 col-md-12 col-lg-5 wow fadeInLeft">
 					<div class="tab-content" id="imagetab">
-						<div class="tab-pane fade show active" id="panel_a_first" role="tabpanel" aria-labelledby="first-tab"><img src="images/services/food.png" alt="img" class="img-fluid"></div>
-						<div class="tab-pane fade" id="panel_a_second" role="tabpanel" aria-labelledby="second-tab"><img src="images/services/ecommerce.png" alt="img" class="img-fluid"></div>
-						<div class="tab-pane fade" id="panel_a_third" role="tabpanel" aria-labelledby="third-tab"><img src="images/services/marketplace.png" alt="img" class="img-fluid"></div>
-						<div class="tab-pane fade" id="panel_a_fourth" role="tabpanel" aria-labelledby="fourth-tab"><img src="images/services/social.png" alt="img" class="img-fluid"></div>
-						<div class="tab-pane fade" id="panel_a_fifth" role="tabpanel" aria-labelledby="fifth-tab"> <img src="images/services/education.png" alt="img" class="img-fluid"></div>
-						<div class="tab-pane fade" id="panel_a_sixth" role="tabpanel" aria-labelledby="sixth-tab"><img src="images/services/food.png" alt="img" class="img-fluid"></div>
-						<div class="tab-pane fade" id="panel_a_seventh" role="tabpanel" aria-labelledby="seventh-tab"><img src="images/services/ecommerce.png" alt="img" class="img-fluid"></div>
-						<div class="tab-pane fade" id="panel_a_eighth" role="tabpanel" aria-labelledby="eighth-tab"><img src="images/services/marketplace.png" alt="img" class="img-fluid"></div>
-						<div class="tab-pane fade" id="panel_a_ninth" role="tabpanel" aria-labelledby="ninth-tab"><img src="images/services/social.png" alt="img" class="img-fluid"></div>
-						<div class="tab-pane fade" id="panel_a_tenth" role="tabpanel" aria-labelledby="tenth-tab"> <img src="images/services/education.png" alt="img" class="img-fluid"></div>
-						<div class="tab-pane fade" id="panel_a_eleventh" role="tabpanel" aria-labelledby="eleventh-tab"> <img src="images/services/education.png" alt="img" class="img-fluid"></div>
+						<div class="tab-pane fade show active" id="panel_a_first" role="tabpanel" aria-labelledby="first-tab"><img src="images/services/website-development/food-web-development.webp" alt="img" class="img-fluid"></div>
+						<div class="tab-pane fade" id="panel_a_second" role="tabpanel" aria-labelledby="second-tab"><img src="images/services/website-development/e-commerce-web-development.webp" alt="img" class="img-fluid"></div>
+						<div class="tab-pane fade" id="panel_a_third" role="tabpanel" aria-labelledby="third-tab"><img src="images/services/website-development/marketplace-web-development.webp" alt="img" class="img-fluid"></div>
+						<div class="tab-pane fade" id="panel_a_fourth" role="tabpanel" aria-labelledby="fourth-tab"><img src="images/services/website-development/education-web-development.webp" alt="img" class="img-fluid"></div>
+						<div class="tab-pane fade" id="panel_a_fifth" role="tabpanel" aria-labelledby="fifth-tab"> <img src="images/services/website-development/healthcare-web-development.webp" alt="img" class="img-fluid"></div>
+						<div class="tab-pane fade" id="panel_a_sixth" role="tabpanel" aria-labelledby="sixth-tab"><img src="images/services/website-development/transport-and-logistics-web-development.webp" alt="img" class="img-fluid"></div>
+						<div class="tab-pane fade" id="panel_a_seventh" role="tabpanel" aria-labelledby="seventh-tab"><img src="images/services/website-development/travel-and-tourism-web-development.webp" alt="img" class="img-fluid"></div>
+						<div class="tab-pane fade" id="panel_a_eighth" role="tabpanel" aria-labelledby="eighth-tab"><img src="images/services/website-development/banking-and-finance-web-development.webp" alt="img" class="img-fluid"></div>
+						<div class="tab-pane fade" id="panel_a_ninth" role="tabpanel" aria-labelledby="ninth-tab"><img src="images/services/website-development/real-estate-web-development.webp" alt="img" class="img-fluid"></div>
+						<div class="tab-pane fade" id="panel_a_tenth" role="tabpanel" aria-labelledby="tenth-tab"> <img src="images/services/website-development/on-demand-delivery-web-development.webp" alt="img" class="img-fluid"></div>
+						<div class="tab-pane fade" id="panel_a_eleventh" role="tabpanel" aria-labelledby="eleventh-tab"> <img src="images/services/website-development/photo-and-video-web-development.webp" alt="img" class="img-fluid"></div>
 					</div>
 				</div>
 				<div class="col-sm-12 col-md-12 col-lg-7 my-auto pl-sm-0 pl-md-4 wow fadeInRight">
@@ -667,9 +667,9 @@
 								</div>
 								<div class="col-sm-12 col-md-6 my-auto">
 									<img src="images/case-study/homestore-logo.png" alt="Homestore Logo" class="case-study-icon-img">
-									<h2 class="mb-20 heading3 font-size-28 mt-3">Home Store Web</h2>
-									<p class="pt-3">An online store for buying our high quality cooking oils at best prices. Notch features that define the world’s best oil delivery app.</p>
-									<a target="_blank" href="home-store-web.html" class="btn btn-naked text-uppercase pt-5">
+									<h2 class="mb-20 heading3 case-study-heading font-size-28 mt-3">Home Store Web</h2>
+									<p class="pt-3 case-study-text">An online store for buying our high quality cooking oils at best prices. Notch features that define the world’s best oil delivery app.</p>
+									<a target="_blank" href="home-store-web.html" class="btn btn-naked text-uppercase pt-3 case-study-link">
 										<span class="btn-line btn-line-before"></span>
 										<span class="btn-txt view-cs-btn"> &mdash;&#32;View Case Study</span>
 										<span class="btn-line btn-line-after"></span>
@@ -684,9 +684,9 @@
 								</div>
 								<div class="col-sm-12 col-md-6 my-auto">
 									<img src="images/case-study/erp-logo.png" alt="ERP Logo" class="case-study-icon-img">
-									<h2 class="mb-20 heading3 font-size-28 mt-3">ERP</h2>
-									<p class="pt-3">Improve your day-to-day business operations with our ERP tool. Boost productivity, improve customer experience, and boost operational efficiency!</p>
-									<a target="_blank" href="erp.html" class="btn btn-naked text-uppercase pt-5">
+									<h2 class="mb-20 heading3 case-study-heading font-size-28 mt-3">ERP</h2>
+									<p class="pt-3 case-study-text">Improve your day-to-day business operations with our ERP tool. Boost productivity, improve customer experience, and boost operational efficiency!</p>
+									<a target="_blank" href="erp.html" class="btn btn-naked text-uppercase pt-3 case-study-link">
 										<span class="btn-line btn-line-before"></span>
 										<span class="btn-txt view-cs-btn">&mdash;&#32;View Case Study</span>
 										<span class="btn-line btn-line-after"></span>
@@ -697,7 +697,7 @@
 					</div>
 				</div>
 			</div>
-			<div class="-cta-btn">
+			<div class="-cta-btn mt-4">
 				<div class="free-cta-title v-center zoomInDown wow" data-wow-delay="1.4s" style="visibility: visible; animation-delay: 1.4s; animation-name: zoomInDown;">
 					<p>Hire a <span>Dedicated Developer</span></p>
 					<a href="#" class="btn-main bg-btn2 lnk">Hire Now<i class="fas fa-chevron-right fa-icon" aria-hidden="true"></i>
@@ -713,13 +713,13 @@
     <div class="custom-app py-3 py-md-3 py-lg-5" id="about">
         <div class="container">
             <div class="row">
-                <div class="col-md-6 wow fadeInLeft">
+                <div class="col-md-6 my-auto wow fadeInLeft">
                     <h2 class="common-heading">Our Work</h2>
                     <p>Our in-house team specializes in providing high-quality web development services that get results. And our goal is to work with you to build a memorable website that assists you in achieving your objectives. We have over two decades of web design experience, which allows us to create profitable websites that look amazing on any device and use modern web design techniques that help your company thrive.</p>
 					<p class="pt-2">We create WordPress websites and eCommerce solutions that prioritize user experience, responsive design, innovation, and expansion. So, whether you're just getting started and need a simple website to launch your business online, or you're an experienced vet in need of a more sophisticated eCommerce solution, our web design & development team can help you realize your vision.</p>
                 </div>
-                <div class="col-md-6 my-auto wow fadeInRight">
-                    <img src="images/services/DTC-4 1.png" alt="" class="img-fluid">
+                <div class="col-md-6 wow fadeInRight">
+                    <img src="images/services/website-development/our-work.webp" alt="" class="img-fluid">
                 </div>
             </div>
         </div>
@@ -736,7 +736,7 @@
                 </div>
             </div>
 
-			<div class="row my-0 my-md-5">
+			<div class="row my-5">
 				<div class="col-md-12 wow fadeInUp">
                     <div class="services-main-timeline">
                         <div class="services-timeline">
@@ -799,7 +799,7 @@
                 </div>
             </div>
 
-			<div class="-cta-btn mt70">
+			<div class="-cta-btn mt-4">
 				<div class="free-cta-title v-center zoomInDown wow" data-wow-delay="1.4s" style="visibility: visible; animation-delay: 1.4s; animation-name: zoomInDown;">
 					<p>Hire a <span>Dedicated Developer</span></p> <a href="#" class="btn-main bg-btn2 lnk">Hire Now<i class="fas fa-chevron-right fa-icon" aria-hidden="true"></i><span class="circle"></span></a> </div>
 			</div>
@@ -816,7 +816,7 @@
                     <p>Web application development solutions that tackle business difficulties in healthcare, finance, retail, and manufacturing are developed by us, a top web app development company. We make certain that the web solution meets your company's needs. Your business operations will be streamlined using custom web websites and apps.</p>
                 </div>
                 <div class="col-md-6 wow fadeInRight">
-                    <img src="images/services/DTC-4 1.png" alt="" class="img-fluid">
+                    <img src="images/services/website-development/custom-web-apps-development.webp" alt="" class="img-fluid">
                 </div>
             </div>
         </div>
@@ -853,32 +853,32 @@
 								<img src="images/tech/html-logo.png" alt="HTML Logo">
 							</a>
 						</li>
-						<li>
+						<li class="mt-5 mt-md-5 mt-lg-0">
 							<a data-bs-toggle="tab" href="#angular" class="boximageicon-seo zoomed">
 								<img src="images/tech/angular-logo.png" alt="Angular Logo">
 							</a>
 						</li>
-						<li class="mt-5">
+						<li class="mt-5 mt-md-5 mt-lg-5 mt-xl-0">
 							<a data-bs-toggle="tab" href="#react" class="boximageicon-seo zoomed">
 								<img src="images/tech/react-native-logo.png" alt="React Logo">
 							</a>
 						</li>
-						<li class="mt-5">
+						<li class="mt-5 mt-md-5 mt-lg-5 mt-xl-5">
 							<a data-bs-toggle="tab" href="#meteor" class="boximageicon-seo zoomed">
 								<img src="images/tech/css-logo.png" alt="Meteor Logo">
 							</a>
 						</li>
-						<li class="mt-5">
+						<li class="mt-5 mt-md-5 mt-lg-5 mt-xl-5">
 							<a data-bs-toggle="tab" href="#vue" class="boximageicon-seo zoomed">
 								<img src="images/tech/html-logo.png" alt="Vue JS Logo">
 							</a>
 						</li>
-						<li class="mt-5">
+						<li class="mt-5 mt-md-5 mt-lg-5 mt-xl-5">
 							<a data-bs-toggle="tab" href="#next" class="boximageicon-seo zoomed">
 								<img src="images/tech/css-logo.png" alt="Next Logo">
 							</a>
 						</li>
-						<li class="mt-5">
+						<li class="mt-5 mt-md-5 mt-lg-5 mt-xl-5">
 							<a data-bs-toggle="tab" href="#ember" class="boximageicon-seo zoomed">
 								<img src="images/tech/html-logo.png" alt="Ember Logo">
 							</a>
@@ -901,24 +901,24 @@
 								<img src="images/tech/python-logo.png" alt="Python Logo">
 							</a>
 						</li>
-						<li>
+						<li class="mt-5 mt-md-5 mt-lg-0">
 							<a data-bs-toggle="tab" href="#java" class="boximageicon-seo zoomed">
 								<img src="images/tech/java-logo.png" alt="Java Logo">
 							</a>
 						</li>
-						<li class="mt-5">
+						<li class="mt-5 mt-md-5 mt-lg-5 mt-xl-0">
 							<a data-bs-toggle="tab" href="#go" class="boximageicon-seo zoomed">
 								<img src="images/tech/php-logo.png" alt="Go Logo">
 							</a>
 						</li>
-						<li class="mt-5">
+						<li class="mt-5 mt-md-5 mt-lg-5 mt-xl-5">
 							<a data-bs-toggle="tab" href="#php" class="boximageicon-seo zoomed">
 								<img src="images/tech/php-logo.png" alt="PHP Logo">
 							</a>
 						</li>
 					</ul>
                     <h4 class="mt-5">Infrastructure</h4>
-					<ul class="nav nav-tabs android-tech-tabs mt-3">
+					<ul class="nav nav-tabs android-tech-tabs my-3">
 						<li>
 							<a data-bs-toggle="tab" href="#magento" class="boximageicon-seo zoomed">
 								<img src="images/tech/magento-logo.png" alt="Magento Logo">
@@ -1200,7 +1200,7 @@
 				</div>
 			</div>
 
-			<div class="-cta-btn mt70">
+			<div class="-cta-btn mt-4">
 				<div class="free-cta-title v-center zoomInDown wow" data-wow-delay="1.4s" style="visibility: visible; animation-delay: 1.4s; animation-name: zoomInDown;">
 					<p>Hire a <span>Dedicated Developer</span></p> <a href="#" class="btn-main bg-btn2 lnk">Hire Now<i class="fas fa-chevron-right fa-icon" aria-hidden="true"></i><span class="circle"></span></a> </div>
 			</div>
@@ -1222,7 +1222,7 @@
 								</div>
 							</div>
 							<div class="col-lg-6 wow fadeInRight my-auto">
-								<p class="key-desc">Build your web presence to thrive just like many others have, &amp; let experienced technicians and digital creators develop functionalities that rivet your target audience.</p>
+								<p class="key-desc pt-2">Build your web presence to thrive just like many others have, &amp; let experienced technicians and digital creators develop functionalities that rivet your target audience.</p>
 							</div>
 						</div>
 					</div>
@@ -1501,7 +1501,7 @@
 					</div>
 				</div>
 			</div>
-			<div class="-cta-btn mt70">
+			<div class="-cta-btn mt-4">
 				<div class="free-cta-title v-center wow fadeInUp" data-wow-delay="1s">
 					<p>We
 						<span>Promise.</span> We <span>Deliver.</span>
