--- a/index.html
+++ b/index.html
@@ -539,62 +539,62 @@
 			<div class="row">
                 <div class="col-lg-12 p-0">
                     <div class="portfolio-filter">
-                        <div class="pf-item set-bg fashion" data-setbg="images/home/mobile-apps.png" style="background-image: url(&quot;images/home/mobile-apps.png&quot;); position: absolute; left: 0%; top: 0px;">
-                            <a href="images/home/mobile-apps.png" class="pf-icon image-popup"><span class="icon_plus"></span></a>
+                        <div class="pf-item set-bg fashion" data-setbg="images/home/mobile-apps.webp" style="background-image: url(&quot;images/home/mobile-apps.webp&quot;); position: absolute; left: 0%; top: 0px;">
+                            <a href="images/home/mobile-apps.webp" class="pf-icon image-popup"><span class="icon_plus"></span></a>
                             <div class="pf-text">
                                 <h4>Mobile Apps</h4>
                             </div>
                         </div>
-                        <div class="pf-item large-width large-height set-bg lifestyle" data-setbg="images/home/metaverse.png" style="background-image: url(&quot;images/home/metaverse.png&quot;); position: absolute; left: 19.9398%; top: 0px;">
-                            <a href="images/home/metaverse.png" class="pf-icon image-popup"><span class="icon_plus"></span></a>
+                        <div class="pf-item large-width large-height set-bg lifestyle" data-setbg="images/home/metaverse.webp" style="background-image: url(&quot;images/home/metaverse.webp&quot;); position: absolute; left: 19.9398%; top: 0px;">
+                            <a href="images/home/metaverse.webp" class="pf-icon image-popup"><span class="icon_plus"></span></a>
                             <div class="pf-text">
                                 <h4>Metaverse</h4>
                             </div>
                         </div>
-                        <div class="pf-item large-width set-bg natural" data-setbg="images/home/virtual-reality.png" style="background-image: url(&quot;images/home/virtual-reality.png&quot;); position: absolute; left: 59.9699%; top: 0px;">
-                            <a href="images/home/virtual-reality.png" class="pf-icon image-popup"><span class="icon_plus"></span></a>
+                        <div class="pf-item large-width set-bg natural" data-setbg="images/home/virtual-reality.webp" style="background-image: url(&quot;images/home/virtual-reality.webp&quot;); position: absolute; left: 59.9699%; top: 0px;">
+                            <a href="images/home/virtual-reality.webp" class="pf-icon image-popup"><span class="icon_plus"></span></a>
                             <div class="pf-text">
                                 <h4>Virtual Reality</h4>
                             </div>
                         </div>
-                        <div class="pf-item large-height set-bg wedding" data-setbg="images/home/character-design.png" style="background-image: url(&quot;images/home/character-design.png&quot;); position: absolute; left: 0%; top: 380px;">
-                            <a href="images/home/character-design.png" class="pf-icon image-popup"><span class="icon_plus"></span></a>
+                        <div class="pf-item large-height set-bg wedding" data-setbg="images/home/character-design.webp" style="background-image: url(&quot;images/home/character-design.webp&quot;); position: absolute; left: 0%; top: 380px;">
+                            <a href="images/home/character-design.webp" class="pf-icon image-popup"><span class="icon_plus"></span></a>
                             <div class="pf-text">
                                 <h4>Character Design</h4>
                             </div>
                         </div>
-                        <div class="pf-item set-bg lifestyle" data-setbg="images/home/web-development.png" style="background-image: url(&quot;images/home/web-development.png&quot;); position: absolute; left: 19.9398%; top: 760px;">
-                            <a href="images/home/web-development.png" class="pf-icon image-popup"><span class="icon_plus"></span></a>
+                        <div class="pf-item set-bg lifestyle" data-setbg="images/home/web-development.webp" style="background-image: url(&quot;images/home/web-development.webp&quot;); position: absolute; left: 19.9398%; top: 760px;">
+                            <a href="images/home/web-development.webp" class="pf-icon image-popup"><span class="icon_plus"></span></a>
                             <div class="pf-text">
                                 <h4>Web Development</h4>
                             </div>
                         </div>
-                        <div class="pf-item set-bg natural" data-setbg="images/home/nft-art.png" style="background-image: url(&quot;images/home/nft-art.png&quot;); position: absolute; left: 39.9549%; top: 760px;">
-                            <a href="images/home/nft-art.png" class="pf-icon image-popup"><span class="icon_plus"></span></a>
+                        <div class="pf-item set-bg natural" data-setbg="images/home/nft-art.webp" style="background-image: url(&quot;images/home/nft-art.webp&quot;); position: absolute; left: 39.9549%; top: 760px;">
+                            <a href="images/home/nft-art.webp" class="pf-icon image-popup"><span class="icon_plus"></span></a>
                             <div class="pf-text">
                                 <h4>NFT Art</h4>
                             </div>
                         </div>
-                        <div class="pf-item set-bg videos" data-setbg="images/home/augmented-reality.png" style="background-image: url(&quot;images/home/augmented-reality.png&quot;); position: absolute; left: 59.9699%; top: 380px;">
-                            <a href="images/home/augmented-reality.png" class="pf-icon image-popup"><span class="icon_plus"></span></a>
+                        <div class="pf-item set-bg videos" data-setbg="images/home/augmented-reality.webp" style="background-image: url(&quot;images/home/augmented-reality.webp&quot;); position: absolute; left: 59.9699%; top: 380px;">
+                            <a href="images/home/augmented-reality.webp" class="pf-icon image-popup"><span class="icon_plus"></span></a>
                             <div class="pf-text">
                                 <h4>Augumented Reality</h4>
                             </div>
                         </div>
-                        <div class="pf-item set-bg fashion" data-setbg="images/home/mixed-reality.png" style="background-image: url(&quot;images/home/mixed-reality.png&quot;); position: absolute; left: 79.985%; top: 380px;">
-                            <a href="images/home/mixed-reality.png" class="pf-icon image-popup"><span class="icon_plus"></span></a>
+                        <div class="pf-item set-bg fashion" data-setbg="images/home/mixed-reality.webp" style="background-image: url(&quot;images/home/mixed-reality.webp&quot;); position: absolute; left: 79.985%; top: 380px;">
+                            <a href="images/home/mixed-reality.webp" class="pf-icon image-popup"><span class="icon_plus"></span></a>
                             <div class="pf-text">
                                 <h4>Mixed Reality</h4>
                             </div>
                         </div>
-                        <div class="pf-item large-width set-bg videos" data-setbg="images/home/games-development.png" style="background-image: url(&quot;images/home/games-development.png&quot;); position: absolute; left: 0%; top: 1140px;">
-                            <a href="images/home/games-development.png" class="pf-icon image-popup"><span class="icon_plus"></span></a>
+                        <div class="pf-item large-width set-bg videos" data-setbg="images/home/games-development.webp" style="background-image: url(&quot;images/home/games-development.webp&quot;); position: absolute; left: 0%; top: 1140px;">
+                            <a href="images/home/games-development.webp" class="pf-icon image-popup"><span class="icon_plus"></span></a>
                             <div class="pf-text">
                                 <h4>Game Development</h4>
                             </div>
                         </div>
-                        <div class="pf-item set-bg fashion" data-setbg="images/home/animation.png" style="background-image: url(&quot;images/home/animation.png&quot;); position: absolute; left: 39.9549%; top: 1140px;">
-                            <a href="images/home/animation.png" class="pf-icon image-popup"><span class="icon_plus"></span></a>
+                        <div class="pf-item set-bg fashion" data-setbg="images/home/animation.webp" style="background-image: url(&quot;images/home/animation.webp&quot;); position: absolute; left: 39.9549%; top: 1140px;">
+                            <a href="images/home/animation.webp" class="pf-icon image-popup"><span class="icon_plus"></span></a>
                             <div class="pf-text">
                                 <h4>Animation</h4>
                             </div>
